[css] Fixed errant misaligned text.

--- a/hotog/places/static/css/style.css
+++ b/hotog/places/static/css/style.css
@@ -4,6 +4,7 @@ body { background-color: #444; }
 .hidden { display: none; }
 
 div.main-rec { width: 350px; margin: 0 auto 50px auto; padding-top: 25px; text-align: center; }
+div.main-rec div { padding: 5px 0 5px 0; }
 
 div.other-recs { width: 450px; margin: 0px auto 0 auto; }
 div.other-recs h2 { text-align: center; }
